<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This is an Android user space port of DVB-T Linux kernel modules.
  ~
  ~ Copyright (C) 2022 by Signalware Ltd <driver at aerialtv.eu>
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dvb_frontend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.martinmarinov.dvbdriver.DvbFrontendActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layTune"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editFreq"
            android:layout_weight="2"
            android:text="@string/defaultFreqMhz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mHz"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinBandwidth"
            android:layout_weight="1"
            android:entries="@array/available_bandwidths_Mhz"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mHz"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinDeliverySystem"
            android:layout_weight="1"
            android:entries="@array/available_deliveryChannels"/>

        <Button
            style="?android:buttonBarButtonStyle"
            android:text="@string/tune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnTune"
            android:enabled="false"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <CheckedTextView
                android:text="@string/hardware_ready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chHardwareReady"
                android:checkMark="@drawable/abc_btn_check_material"
                android:checked="false" />

            <CheckedTextView
                android:text="@string/has_signal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chHasSignal"
                android:checkMark="@drawable/abc_btn_check_material"
                android:checked="false" />

            <CheckedTextView
                android:text="@string/carrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chHasCarrier"
                android:checkMark="@drawable/abc_btn_check_material"
                android:checked="false" />

            <CheckedTextView
                android:text="@string/sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chHasSync"
                android:checkMark="@drawable/abc_btn_check_material"
                android:checked="false" />

            <CheckedTextView
                android:text="@string/lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chHasLock"
                android:checkMark="@drawable/abc_btn_check_material"
                android:checked="false" />

            <TextView
                android:text="@string/rf_strength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ProgressBar
                style="@style/HorizontalBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progRf" />

            <TextView
                android:text="@string/quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ProgressBar
                style="@style/HorizontalBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progQuality" />

            <TextView
                android:text="@string/more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSnr" />

            <TextView
                android:text="@string/more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDroppedFps" />

            <TextView
                android:text="@string/more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtBitrate" />

            <TextView
                android:text="@string/no_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDeviceName" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            style="?android:buttonBarButtonStyle"
            android:text="@string/start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btnStartStop" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:text="@string/dump"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:id="@+id/btnDump" />

    </LinearLayout>

</LinearLayout>
