<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This is an Android user space port of DVB-T Linux kernel modules.
  ~
  ~ Copyright (C) 2017 Martin Marinov <martintzvetomirov at gmail com>
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.martinmarinov.dvbdriver.WelcomeActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks" />
    </ScrollView>

    <Button
        android:id="@+id/btn_advanced_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_advanced_mode"/>

    <Button
        android:id="@+id/btn_source_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_source_code"/>

    <Button
        android:id="@+id/btn_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_license"/>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_close"/>

</LinearLayout>
